--- a/report/report.tex
+++ b/report/report.tex
@@ -234,7 +234,7 @@ Now, we know, $\phi(\alpha, t_2) \leq \phi(\alpha, t_1)$ for any $0 < t_1 \leq t
 
 Next, the $u(\alpha, \alpha_0, \xi, t)$ was constructed for the DC function $\phi(\alpha, t)$ around the point $\alpha_0$, with $\phi(\alpha, t) \leq u(\alpha, \alpha_0, \xi, t)$. Following the same logic as above, the feasible sets of $CP_t$, given by $$F_t(\alpha_0, \xi) = \{ \alpha \in \mathbb{R}^n \ :\ u(\alpha, \alpha_0, \xi, t) \leq K \}$$ follow $F_t(\alpha_0, \xi) \subseteq F_t \text{ for all } t > 0,\  \xi \in \partial\phi(\alpha_0, t)$. This means, $v(P_t(\alpha_0, \xi)) \geq v(P_t)\text{ for all } t > 0,\  \xi \in \partial\phi(\alpha_0, t)$.
 
-We further relax the non-smoothness of the constraint in $P_t(\alpha_0, \xi)$ by introducing additional variables $z_i$, to form the problem $CP_t(\alpha_0, \xi)$. This step does not change the problem and forces $z_i = |\alpha_i|$. The constraint introduced, $-z_i \leq \alpha_i \leq z_i$ is equivalent to saying $|\alpha_i| \leq z_i$. The feasible sets over $\alpha$ for $CP_t(\alpha_0, \xi)$, are, then, smaller subsets of the feasible sets over $\alpha$ for $P_t(\alpha_0, \xi)$ for any $|\alpha_i| < z_i$ (since the objective function is a non-decreasing function as $\alpha_i$ moves away from the optimum). Hence, the minimum always lies in the difference of the feasible sets for $P_t(\alpha_0, \xi)$ and $CP_t(\alpha_0, \xi)$, except when $|\alpha_i| = z_i$, when both minima are equal. Thus, if there exists a solution to $P_t(\alpha_0, \xi)$, given by $x^*$, there is a solution to $CP_t(\alpha_0, \xi)$, given by $x^*, z^*$ where $z_i = |x_i|$. Thus $P_t(\alpha_0, \xi)$ and $P_t(\alpha_0, \xi)$ are equivalent optimization problems. We use the fact that $CP_t(\alpha_0, \xi)$ is smooth to derive a condition on the optimum for $CP_t(\alpha_0, \xi)$, and therefore the optimum of $P_t(\alpha_0, \xi)$.
+We further relax the non-smoothness of the constraint in $P_t(\alpha_0, \xi)$ by introducing additional variables $z_i$, to form the problem $CP_t(\alpha_0, \xi)$. This step does not change the problem and forces $z_i = |\alpha_i|$. The constraint introduced, $-z_i \leq \alpha_i \leq z_i$ is equivalent to saying $|\alpha_i| \leq z_i$. The feasible sets over $\alpha$ for $CP_t(\alpha_0, \xi)$, are, then, smaller subsets of the feasible sets over $\alpha$ for $P_t(\alpha_0, \xi)$ for any $|\alpha_i| < z_i$ (since the objective function is a non-decreasing function as $\alpha_i$ moves away from the optimum). Hence, the minimum always lies in the difference of the feasible sets for $P_t(\alpha_0, \xi)$ and $CP_t(\alpha_0, \xi)$, except when $|\alpha_i| = z_i$, when both minima are equal. Thus, if there exists a solution to $P_t(\alpha_0, \xi)$, given by $\alpha^*$, there is a solution to $CP_t(\alpha_0, \xi)$, given by $\alpha^*, z^*$ where $z_i = |\alpha_i|$. Thus $P_t(\alpha_0, \xi)$ and $P_t(\alpha_0, \xi)$ are equivalent optimization problems. We use the fact that $CP_t(\alpha_0, \xi)$ is smooth to derive a condition on the optimum for $CP_t(\alpha_0, \xi)$, and therefore the optimum of $P_t(\alpha_0, \xi)$.
 
 Now that we have shown the relation between $P$ and $P_t$, we will analyze the optimum of $P_t$. Let $\alpha^*$ be a local optimum for $P_t$. The KKT conditions (formulated with respect to the sub-gradient) imply that there exists a non-negative $\mu^*$ such that
 $$0 \in 2A^TA\alpha^* + A^Ty + \mu^* \partial \phi(\alpha^*, t),$$
@@ -248,7 +248,7 @@ $$\tilde{\mu} \left( \frac{1}{t} e^T \tilde{z} - \frac{1}{t} g(\alpha_0, t) - K 
 $$\tilde{\zeta_i} (z_i - \tilde{\alpha}_i) = 0,$$
 $$\tilde{\beta_i} (z_i + \tilde{\alpha}_i) = 0$$
 
-\noindent We already showed that $\tilde{\alpha_i} = \tilde{z_i}$. This implies, $\tilde{\alpha_i} > 0 \implies \tilde{\beta_i} = 0$ and $\tilde{\alpha_i} < 0 \implies \tilde{\zeta_i} = 0$. Thus, $\tilde{\zeta_i} = (1/t)\tilde{\mu}$ when $\tilde{\alpha_i} > 0$ and $\tilde{\beta_i} = (1/t)\tilde{\mu}$ when $\tilde{\alpha_i} < 0$. When $\tilde{\alpha_i} = 0$, $\tilde{\zeta} - \tilde{\beta} \in \left[-(1/t)\tilde{\mu}, (1/t)\tilde{\mu}\right]$. This implies that $\tilde{\zeta} - \tilde{\beta} - (1/t) \tilde{\mu} \xi \in \tilde{\mu} \partial\phi(\tilde{\alpha_i}, t)$. Then, the first equation in the $CP_t(\alpha_0, \xi)$ KKT conditions implies the first equation in the $P_t$ KKT conditions, and the constraint conditions in $CP_t(\alpha_0, \xi)$ give the constraint conditions in $P_t$, if $\tilde{\alpha} = \alpha_0$. Thus, we prove that if there exists a solution $(\alpha_0, |\alpha_0|)$ to $CP_t(\alpha_0, \xi)$ for some $\xi \in g(\alpha_0, t)$, that is the solution for $P_t$.
+\noindent We already showed that $|\tilde{\alpha_i}| = \tilde{z_i}$. This implies, $\tilde{\alpha_i} > 0 \implies \tilde{\beta_i} = 0$ and $\tilde{\alpha_i} < 0 \implies \tilde{\zeta_i} = 0$. Thus, $\tilde{\zeta_i} = (1/t)\tilde{\mu}$ when $\tilde{\alpha_i} > 0$ and $\tilde{\beta_i} = (1/t)\tilde{\mu}$ when $\tilde{\alpha_i} < 0$. When $\tilde{\alpha_i} = 0$, $\tilde{\zeta} - \tilde{\beta} \in \left[-(1/t)\tilde{\mu}, (1/t)\tilde{\mu}\right]$. This implies that $\tilde{\zeta} - \tilde{\beta} - (1/t) \tilde{\mu} \xi \in \tilde{\mu} \partial\phi(\tilde{\alpha}, t)$. Then, the first equation in the $CP_t(\alpha_0, \xi)$ KKT conditions implies the first equation in the $P_t$ KKT conditions, and the constraint conditions in $CP_t(\alpha_0, \xi)$ give the constraint conditions in $P_t$, if $\tilde{\alpha} = \alpha_0$. Thus, we prove that if there exists a solution $(\alpha_0, |\alpha_0|)$ to $CP_t(\alpha_0, \xi)$ for some $\xi \in g(\alpha_0, t)$, that is the solution for $P_t$.
 
 With this, we can generate a series of subproblems by solving $CP_t(\alpha^k, \xi^k)$, and setting the solution to $\alpha^{k+1}$. If the difference $\alpha^{k+1} - \alpha^{k}$ is small (in terms of some norm), we can say that $\alpha^{k}$ approximately solves $CP_t(\alpha^k, \xi^k)$. By the above proof, we have that $\alpha^k$ is a KKT point for $P_t$. As we proved at the beginning of the section, the problem $P_t$ converges to the original compressed sensing problem $P$ as $t \rightarrow 0$. This means, choosing a small t we almost exactly solve the compressed sensing problem with our successive convex approximations.
 
